Resolve fdo#72632 by adding missing break

Change-Id: I7e27b685f2e6e1e1b96aee907f4c634252b0e17b
Reviewed-on: https://gerrit.libreoffice.org/7270
Tested-by: Arnaud Versini <arnaud.versini@libreoffice.org>
Reviewed-by: Arnaud Versini <arnaud.versini@libreoffice.org>
(cherry picked from commit bdc192739892114e8b159a8af185ff28b873e748)